<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Design</string>
    <string name="title_item_detail">Item Detail</string>

    <string name="permission_control">权限控制</string>
    <string name="permission_allow">已经授权！</string>
    <string name="permission_refuse">拒绝授权，提示请求许可理由！</string>
    <string name="permission_noAsk">拒绝授权，不再提醒！</string>
    <string name="permission_storage_title">权限申请</string>
    <string name="permission_storage_des">在设置-应用-Design-权限中开启存储空间权限，以正常使用Design功能</string>
    <string name="permission_noAsk3">拒绝授权，不再提醒！</string>
    <string name="permission_cancel">取消</string>
    <string name="permission_ok">去设置</string>

    <string name="title_home">首页</string>
    <string name="title_ticket">购票</string>
    <string name="title_shop">商城</string>
    <string name="title_live">直播</string>
    <string name="title_me">我的</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="text_area_select">地区选择</string>
    <string name="text_hot_movies">热门</string>
    <string name="title_activity_wan_main">WanMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">未登录</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">登录</string>
    <!-- Strings related to login -->
    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="quickstart_message">Click the SUBSCRIBE TO NEWS button below to subscribe to the
        news topic. Messages sent to the news topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_news">Subscribe To News</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">News</string>
    <string name="msg_subscribe_failed">Failed to subscribe to news topic</string>
    <string name="fcm_message">FCM Message</string>


</resources>
