<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/radio_main_message"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_ticket"
        android:icon="@drawable/radio_main_member"
        android:title="@string/title_ticket"/>
    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/radio_main_find"
        android:title="@string/title_shop"/>
    <item
        android:id="@+id/navigation_live"
        android:icon="@drawable/radio_main_find"
        android:title="@string/title_live"/>

    <item
        android:id="@+id/navigation_me"
        android:icon="@drawable/radio_main_me"
        android:title="@string/title_me"/>

</menu>
